# product-registration-api

./: .env  .gitignore  README.md  pyproject.toml
src/: main.py
src/config/: database.py  dependencies.py  log_config.py  settings.py
src/controller/: auth_controller.py  product_controller.py
src/domain/dto/: dtos.py
src/domain/model/: models.py
src/repository/: usuario_repository.py
src/service/: auth_service.py  product_service.py
